--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,18 @@
 {
   "dependencies": {
+    "dotenv": "^16.3.1",
     "express": "^4.18.2"
-  }
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
+  },
+  "name": "backend",
+  "version": "1.0.0",
+  "main": "server.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "description": ""
 }
